[package]
name = "cute_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.61"
tokio = {version="1.24.0", features=["sync"]}
tokio-stream = "0.1.11"
async-stream = {version = "0.3.3"}